# CSC

./: README.md  election.ipynb  election.py  manual_pabutools.py  pyproject.toml  requirements.txt  visualize.py
2024-03-23_10-28-29_pabulib/: link.txt  netherlands_amsterdam_252_.pb
data/: netherlands_amsterdam_252_.pb
