[tool.poetry]
name = "csc"
version = "0.1.0"
description = ""
authors = ["Lucas Velvis <lucasvelvis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
pabutools = "^1.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
